# wheels

./: .clang-format  .gitignore  .gitmodules  LICENSE
cmake_guide/sample1/: .gitignore  CMakeLists.txt  sample1.cpp  sample1.h
cmake_guide/sample2/: CMakeLists.txt  Calculations.cpp  Calculations.h  sample2.cpp
cmake_guide/sample3/: CMakeLists.txt  Calculations.cpp  Calculations.h  sample3.cpp
cmake_guide/sample4/: CMakeLists.txt  Calculations.cpp  Calculations.h  LICENSE.txt  sample4.cpp  wix-patch.xml
cmake_guide/sample5/: CMakeLists.txt  packages.config.in  sample5.cpp
cmake_guide/sample6/: CMakeLists.txt  Calculations.h  sample6_unittest.cpp
cmake_guide/sample7/: CMakeLists.txt  sample7.cpp
model/sample1/: CMakeLists.txt  README.md  main.cpp
